# Black-Dragon-studio

./: .dockerignore  BUILD_LOG.md  DEVPOST_SUBMISSION.md  Dockerfile  LICENSE  README.md  black_dragon_studio_constitution_v1.md  docker-compose.yml
reference-runtime/: LICENSE  README.md  SUBMISSION.md  pyproject.toml  requirements.txt
reference-runtime/deploy/: README.md  alibaba_oss_telemetry.py  env.production.example  nomad-sentinel.service  setup.sh  verify.sh
reference-runtime/deploy/fc/: bootstrap  deploy.sh  requirements-fc.txt  s.yaml
reference-runtime/docs/: ARM_OPTIMIZATION.md  NPU_PIPELINE.md  REFLEX_KERNEL_BENCHMARK.md  architecture.md  build_dashboard.py  dashboard.html  optical_skin_demo.html
reference-runtime/docs/npu_artifacts/: reflex_kernel_int8.tflite  reflex_kernel_int8_vela_u55-256.tflite  reflex_kernel_int8_vela_u55-32.tflite  vela_report_u55-256.csv  vela_report_u55-32.csv
reference-runtime/outputs/: edge_cloud_log_live_qwen_cloud.json  stress_test_results.json
reference-runtime/scripts/: build_dashboard.py  build_npu_model.py  reaction_time_benchmark.py  run_edge_cloud_demo.py  run_scenarios.py  stress_test_matrix.py
reference-runtime/tests/: test_cloud_cognition.py  test_metrics.py  test_physics.py  test_plugin_discovery.py
studio/backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
studio/backend/app/: engineering_team.py  generator.py  knowledge_graph.py  main.py  models.py  packager.py  spec_agent.py  storage.py  validator.py
studio/backend/tests/: test_api.py  test_knowledge_graph.py  test_models.py  (+2 more)
(+54 files in other folders)
