[project]
name = "black-dragon-studio-backend"
version = "0.1.0"
description = "Black Dragon Studio backend: FastAPI service that turns natural-language Physical AI requirements into a validated, simulated, exportable project."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
